# awscm-proxy

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  README.rst  bidirectional-proxy.yaml  deploy.py  http_echo.py  proxy-role.yaml  proxy-template-apiv2.yaml  proxy-template-chatgpt.yaml  proxy-template.yaml  proxy.py  pyproject.toml  template.yaml  unidirectional-proxy.yaml
.github/workflows/: publish-pypi.yaml
awscm_proxy/: bidirectional-proxy.yaml  proxy.py  unidirectional-proxy.yaml
docs/: architecture-mitmproxy.excalidraw  architecture.excalidraw  conf.py  how-it-works.rst  index.rst  security.rst  use.rst
docs/images/: architecture.excalidraw  bidirectional-proxy.excalidraw  unidirectional-proxy.excalidraw
tools/: http_proxy.py
ui/: .eslintrc  .prettierrc  index.html  package.json
ui/src/: Dashboard.js  main.js
